[gd_scene load_steps=25 format=3 uid="uid://c1hwcuglxktfc"]

[ext_resource type="Script" path="res://Script/Enemy/StaticEnemy/living_vine/living_vine.gd" id="1_xkl8g"]
[ext_resource type="Material" uid="uid://cmv24i1lrmfiw" path="res://Shader/enemy.tres" id="2_56ybp"]
[ext_resource type="Texture2D" uid="uid://c3vjcauii36e2" path="res://Art/Enemy/vineRed/idle.png" id="3_2rnvg"]
[ext_resource type="Script" path="res://Script/CombatComponent/attack_box.gd" id="3_nl542"]
[ext_resource type="Script" path="res://Script/CombatComponent/damage_data.gd" id="4_2what"]
[ext_resource type="Script" path="res://Script/CombatComponent/hurt_box.gd" id="5_qiaok"]
[ext_resource type="Texture2D" uid="uid://dbffa3d86qrba" path="res://Art/Effect/Tex_random.png" id="6_b44ql"]
[ext_resource type="Texture2D" uid="uid://mrdy362tqpjr" path="res://Art/Effect/slash_1.png" id="7_x2bej"]
[ext_resource type="PackedScene" uid="uid://bkijr6cnrf2dy" path="res://Scenes/Effect/dead_particle.tscn" id="8_x6ri7"]
[ext_resource type="AudioStream" uid="uid://dgcehrixe8dlp" path="res://Audio/HitSound/body_hit_finisher_23.wav" id="10_5wceh"]
[ext_resource type="AudioStream" uid="uid://cg34kv7j6hqy5" path="res://Audio/HitSound/face_hit_small_78.wav" id="10_rv2xl"]
[ext_resource type="Texture2D" uid="uid://ckeioj5qdml8r" path="res://Art/Enemy/vineRed/attack.png" id="12_7h8u1"]

[sub_resource type="Resource" id="Resource_mm4jx"]
script = ExtResource("4_2what")
damage = 1.0
knockback = 300.0
sender_position = Vector2(0, 0)
take_damage_rule = 0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_afwn2"]
size = Vector2(203.5, 171)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y5vfo"]
size = Vector2(45.2916, 171)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u33lk"]
size = Vector2(40, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1ivdk"]
size = Vector2(62, 173)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_hdhnj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0i4ir"]
atlas = ExtResource("6_b44ql")
region = Rect2(40.1037, 196.189, 117.956, 113.449)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_5ysop"]
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 4
particles_anim_loop = true

[sub_resource type="Animation" id="Animation_6fqea"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Direction/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_2rnvg")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Direction/Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Direction/Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Direction/Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Direction/Sprite2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(5, -112)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Direction/Sprite2D:frame_coords")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Direction/AttackBox/AttackArea:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Direction/AttackBox/AttackArea:shape:size")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(203.5, 171)]
}

[sub_resource type="Animation" id="Animation_sdqg2"]
resource_name = "attack"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Direction/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("12_7h8u1")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Direction/Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Direction/Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Direction/Sprite2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(75, -112)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Direction/Sprite2D:frame_coords")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(0, 1), Vector2i(0, 2), Vector2i(0, 3), Vector2i(1, 0), Vector2i(1, 1), Vector2i(1, 2), Vector2i(1, 3)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Direction/AttackBox/AttackArea:shape:size")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(203.5, 171)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Direction/AttackBox/AttackArea:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(78.75, -61.5)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Direction/AttackBox/AttackArea:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.499438, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_jshf1"]
resource_name = "idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Direction/Sprite2D:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Direction/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Direction/Sprite2D:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_2rnvg")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Direction/Sprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Direction/Sprite2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(8, -112)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Direction/AttackBox/AttackArea:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h3pxs"]
_data = {
"RESET": SubResource("Animation_6fqea"),
"attack": SubResource("Animation_sdqg2"),
"idle": SubResource("Animation_jshf1")
}

[node name="LivingVine" type="StaticBody2D"]
collision_layer = 0
script = ExtResource("1_xkl8g")
max_hp = 3.0
attack_cooldown_duration = 0.5

[node name="Direction" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Direction"]
material = ExtResource("2_56ybp")
position = Vector2(5, -112)
texture = ExtResource("3_2rnvg")
hframes = 4

[node name="AttackBox" type="Area2D" parent="Direction"]
position = Vector2(1.5, -23)
collision_layer = 4
collision_mask = 0
script = ExtResource("3_nl542")
damage_data = SubResource("Resource_mm4jx")

[node name="AttackArea" type="CollisionShape2D" parent="Direction/AttackBox"]
position = Vector2(78.75, -61.5)
shape = SubResource("RectangleShape2D_afwn2")
disabled = true
debug_color = Color(0.964706, 0, 0.490196, 0.419608)

[node name="contack" type="Area2D" parent="Direction"]
position = Vector2(1.5, -23)
collision_layer = 4
collision_mask = 0
script = ExtResource("3_nl542")
damage_data = SubResource("Resource_mm4jx")

[node name="AttackArea" type="CollisionShape2D" parent="Direction/contack"]
position = Vector2(-0.25, -61.048)
shape = SubResource("RectangleShape2D_y5vfo")
debug_color = Color(0.964706, 0, 0.490196, 0.419608)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.5, -23)
shape = SubResource("RectangleShape2D_u33lk")

[node name="HurtBox" type="Area2D" parent="."]
position = Vector2(1.5, -23)
collision_layer = 8
collision_mask = 10
script = ExtResource("5_qiaok")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -62.5)
shape = SubResource("RectangleShape2D_1ivdk")
debug_color = Color(0.188235, 0.631373, 0.333333, 0.419608)

[node name="Particle" type="Node2D" parent="."]
position = Vector2(0, -86)

[node name="HitEffect" type="CPUParticles2D" parent="Particle"]
material = SubResource("CanvasItemMaterial_hdhnj")
emitting = false
lifetime = 0.5
one_shot = true
preprocess = 0.03
explosiveness = 0.73
randomness = 0.79
local_coords = true
texture = SubResource("AtlasTexture_0i4ir")
emission_shape = 3
emission_rect_extents = Vector2(50, 50)
gravity = Vector2(0, 0)
initial_velocity_min = 185.0
initial_velocity_max = 1000.0
damping_min = 9.0
damping_max = 9.0
scale_amount_min = 0.01
scale_amount_max = 0.3

[node name="SlashEffect" type="CPUParticles2D" parent="Particle"]
material = SubResource("CanvasItemMaterial_5ysop")
rotation = 0.565487
emitting = false
amount = 1
lifetime = 0.3
one_shot = true
local_coords = true
draw_order = 1
texture = ExtResource("7_x2bej")
direction = Vector2(0, 0)
gravity = Vector2(0, 0)
scale_amount_min = 0.5
scale_amount_max = 0.7
anim_speed_min = 1.0
anim_speed_max = 1.0

[node name="DeadParticle" parent="Particle" instance=ExtResource("8_x6ri7")]

[node name="Audio" type="Node2D" parent="."]

[node name="HitSound" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("10_rv2xl")

[node name="DeadSound" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("10_5wceh")
bus = &"Effect"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_h3pxs")
}
autoplay = "idle"

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(-183, -25)
target_position = Vector2(370, 0)
collision_mask = 16
